@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.11.6-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-11-06 16:10:33, took 00:18:59, with 50 workers, on 4066 cases, 0 failed, 0 traces, 10 retries
+-;-;-;2025-11-06 17:39:28, took 00:19:58, with 50 workers, on 4066 cases, 1 failed, 0 traces, 14 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -1073,7 +1073,7 @@ http://sources.freertr.org/cfg/crypt-tls08.tst;crypt-tls08.tst;success;tls with 
 http://sources.freertr.org/cfg/crypt-tls09.tst;crypt-tls09.tst;success;tls with mldsa
 http://sources.freertr.org/cfg/crypt-wireguard01.tst;crypt-wireguard01.tst;success;wireguard over ipv4
 http://sources.freertr.org/cfg/crypt-wireguard02.tst;crypt-wireguard02.tst;success;wireguard over ipv6
-http://sources.freertr.org/cfg/crypt-wireguard03.tst;crypt-wireguard03.tst;success;wireguard over wireguard
+http://sources.freertr.org/cfg/crypt-wireguard03.tst;crypt-wireguard03.tst;#6-run-r1 tping 100 10 2.2.2.2 vrf v1;wireguard over wireguard
 http://sources.freertr.org/cfg/crypt-wireguard04.tst;crypt-wireguard04.tst;success;wireguard over loopback
 http://sources.freertr.org/cfg/crypt-wireguard05.tst;crypt-wireguard05.tst;success;wireguard over asymmetric ports
 http://sources.freertr.org/cfg/demo01.tst;demo01.tst;success;empty demo network
