@@ -17639,3 +17639,6 @@ failed: wireguard over asymmetric ports
 ---------------------------------- 2025-11-05 17:55:31 25.11.5
 no failed: wireguard over asymmetric ports
 qc pass: wireguard over asymmetric ports
+---------------------------------- 2025-11-06 17:19:30 25.11.6
+no qc pass: wireguard over wireguard
+failed: wireguard over wireguard
